refactor: 数据库导出/校验对接 infrastructure 归档框架 (2.0.0-alpha-20260810.1) --- 1. DbImage 对接 ArchiveImage，双模探测：新格式读 ZIP 注释定位的独立框架元数据，旧格式回落 metadata.json 内嵌 export 段； 2. DbExportUtil.exportRawZip 改用 ArchiveWriter，元数据与负载分离； 3. DbPackage 原子写/移动/递归删除委托 AtomicFiles/ArchiveIO； 4. 删除自建 DbValidationResult，DatabaseApi.validateImage 改返回 infrastructure 的 ValidationResult； 5. 测试重写为校验独立框架元数据，新增旧格式包回落兼容测试； 6. 同步 infrastructure 侧 ArchiveImage.requiredEntries 放宽为「实际存在」并清理 ArchiveWriter 冗余代码。