@@ -2,6 +2,9 @@ package com.billy65536.chunkscanner.core.db;
 
 import com.billy65536.chunkscanner.components.db.BinaryChunkDb;
 import com.billy65536.chunkscanner.core.IChunkDb;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -32,7 +35,7 @@ import static org.junit.jupiter.api.Assertions.*;
  *   <li>{@code buildDefaultFileName} 命名格式（不依赖 MC 运行时）</li>
  *   <li>{@code bytesToHex} 十六进制编解码</li>
  *   <li>{@code exportTsv} 输出 hex key + tab + hex value</li>
- *   <li>{@code exportRawZip} 归档内容、metadata.json 字段与 SHA-256 一致性</li>
+ *   <li>{@code exportRawZip} 归档内容、负载原样嵌入，以及独立框架元数据的时间与 SHA-256</li>
  * </ul>
  *
  * <p>所有导出均显式传入 outFile，避开 {@code ChunkScannerMod.getDbRoot()}（游戏运行时依赖）。</p>
@@ -204,16 +207,14 @@ class DbExportUtilTest {
             String meta = "{"
                     + "\"scanId\":\"scan-1\","
                     + "\"analyzerId\":\"chunkscanner:sign\","
-                    + "\"database\":{\"type\":\"chunkscanner:binary\",\"file\":\"main.bin\"},"
-                    + "\"export\":{\"time\":\"2026-08-09T12:00:00Z\","
-                    + "\"files\":[{\"name\":\"main.bin\",\"sha256\":\"deadbeef\"}]}"
+                    + "\"database\":{\"type\":\"chunkscanner:binary\",\"file\":\"main.bin\"}"
                     + "}";
             Files.write(pkgDir.resolve("metadata.json"), meta.getBytes(StandardCharsets.UTF_8));
             return DbPackage.open(pkgDir);
         }
 
         @Test
-        @DisplayName("归档包含主数据库文件与 metadata.json")
+        @DisplayName("归档包含主数据库文件，且 metadata.json 作为普通负载原样嵌入")
         void zip_shouldContainFilesAndMeta(@TempDir Path dir) throws IOException {
             DbPackage pkg = newPackage(dir, "hello dat".getBytes(StandardCharsets.UTF_8));
             Path out = dir.resolve("out.zip");
@@ -223,22 +224,24 @@ class DbExportUtilTest {
 
             try (ZipFile zip = new ZipFile(out.toFile())) {
                 assertNotNull(zip.getEntry("main.bin"), "主数据库文件应被归档");
-                assertNotNull(zip.getEntry("metadata.json"));
+                assertNotNull(zip.getEntry("metadata.json"), "包内 metadata.json 应作为普通负载归档");
 
-                String meta = new String(zip.getInputStream(zip.getEntry("metadata.json"))
-                        .readAllBytes(), StandardCharsets.UTF_8);
-                assertTrue(meta.contains("\"scanId\": \"scan-1\""));
-                assertTrue(meta.contains("\"analyzerId\": \"chunkscanner:sign\""));
-                assertTrue(meta.contains("\"type\": \"chunkscanner:binary\""),
-                        "metadata.database.type 应记录数据库类型");
-                assertTrue(meta.contains("\"file\": \"main.bin\""),
-                        "metadata.database.file 应记录主文件名");
-                assertTrue(meta.contains("\"sha256\""), "metadata.json 应记录每个文件的 SHA-256");
+                byte[] onDisk = Files.readAllBytes(pkg.getDir().resolve("metadata.json"));
+                byte[] inZip = zip.getInputStream(zip.getEntry("metadata.json")).readAllBytes();
+                assertArrayEquals(onDisk, inZip, "metadata.json 应原样嵌入，归档框架不得改写负载");
             }
+
+            // 归档时间与文件摘要归框架元数据管，与负载完全分离
+            JsonObject archiveMeta = readArchiveMeta(out);
+            JsonObject business = archiveMeta.getAsJsonObject("business");
+            assertEquals("scan-1", business.get("scanId").getAsString());
+            assertEquals("chunkscanner:sign", business.get("analyzerId").getAsString());
+            assertNotNull(shaOf(archiveMeta, "main.bin"), "框架元数据应声明主数据库文件摘要");
+            assertNotNull(shaOf(archiveMeta, "metadata.json"), "框架元数据应声明 metadata.json 摘要");
         }
 
         @Test
-        @DisplayName("归档内文件内容与 SHA-256 元数据一致")
+        @DisplayName("归档内文件内容与框架元数据的 SHA-256 一致")
         void sha256_shouldMatchArchiveContent(@TempDir Path dir) throws IOException, java.security.NoSuchAlgorithmException {
             byte[] content = "payload for hash check".getBytes(StandardCharsets.UTF_8);
             DbPackage pkg = newPackage(dir, content);
@@ -250,32 +253,54 @@ class DbExportUtilTest {
                 ZipEntry entry = zip.getEntry("main.bin");
                 byte[] actual = zip.getInputStream(entry).readAllBytes();
                 assertArrayEquals(content, actual, "归档内文件内容不得被改写");
-
-                String meta = new String(zip.getInputStream(zip.getEntry("metadata.json"))
-                        .readAllBytes(), StandardCharsets.UTF_8);
-
-                String expectedSha = DbExportUtil.bytesToHex(
-                        MessageDigest.getInstance("SHA-256").digest(content));
-                assertTrue(meta.contains("\"sha256\": \"" + expectedSha + "\""),
-                        "metadata 的 sha256 必须等于原文件摘要");
             }
+
+            String expectedSha = DbExportUtil.bytesToHex(
+                    MessageDigest.getInstance("SHA-256").digest(content));
+            assertEquals(expectedSha, shaOf(readArchiveMeta(out), "main.bin"),
+                    "框架元数据的 sha256 必须等于原文件摘要");
         }
 
         @Test
-        @DisplayName("exportTime 使用 ISO_OFFSET_DATE_TIME 格式")
+        @DisplayName("归档时间使用 ISO_OFFSET_DATE_TIME 格式")
         void exportTime_shouldBeIsoOffset(@TempDir Path dir) throws IOException {
             DbPackage pkg = newPackage(dir, "x".getBytes(StandardCharsets.UTF_8));
             Path out = dir.resolve("out.zip");
             DbExportUtil.exportRawZip(pkg, out);
 
-            try (ZipFile zip = new ZipFile(out.toFile())) {
-                String meta = new String(zip.getInputStream(zip.getEntry("metadata.json"))
-                        .readAllBytes(), StandardCharsets.UTF_8);
-                String time = meta.replaceAll("(?s).*\"time\":\\s*\"([^\"]+)\".*", "$1");
-                assertTrue(Pattern.matches(
-                        "\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(\\.\\d+)?(Z|[+-]\\d{2}:\\d{2})", time),
-                        "应带时区（UTC 时输出 Z 后缀，其他时区为 ±hh:mm，均允许纳秒小数位），实际: " + time);
+            String time = readArchiveMeta(out).get("time").getAsString();
+            assertTrue(Pattern.matches(
+                    "\\d{4}-\\d{2}-\\d{2}T\\d{2}:\\d{2}:\\d{2}(\\.\\d+)?(Z|[+-]\\d{2}:\\d{2})", time),
+                    "应带时区（UTC 时输出 Z 后缀，其他时区为 ±hh:mm，均允许纳秒小数位），实际: " + time);
+        }
+    }
+
+    // ==================== 框架元数据读取 ====================
+
+    /** 经 ZIP 注释定位随机命名的框架元数据 entry 并解析。 */
+    private static JsonObject readArchiveMeta(Path zip) throws IOException {
+        try (ZipFile zf = new ZipFile(zip.toFile())) {
+            String hex = zf.getComment();
+            assertNotNull(hex, "新格式归档应把元数据随机后缀写入 ZIP 注释");
+            assertFalse(hex.isEmpty(), "ZIP 注释不应为空");
+
+            String entryName = "archive." + hex + ".metadata.json";
+            ZipEntry entry = zf.getEntry(entryName);
+            assertNotNull(entry, "框架元数据 entry 应存在: " + entryName);
+
+            return JsonParser.parseString(new String(
+                    zf.getInputStream(entry).readAllBytes(), StandardCharsets.UTF_8)).getAsJsonObject();
+        }
+    }
+
+    /** 从框架元数据的 files 清单中取指定文件的 sha256，未声明则返回 null。 */
+    private static String shaOf(JsonObject archiveMeta, String name) {
+        for (JsonElement el : archiveMeta.getAsJsonArray("files")) {
+            JsonObject fo = el.getAsJsonObject();
+            if (name.equals(fo.get("name").getAsString())) {
+                return fo.get("sha256").getAsString();
             }
         }
+        return null;
     }
 }
